--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -120,7 +120,7 @@ jobs:
             css/                                 \
             lang/                                \
             module/                              \
-            template/
+            templates/
           # Don't forget to add a backslash at the end of the line for any
           # additional files or directories!
 
