--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -137,3 +137,15 @@ jobs:
           artifacts: './module.json, ./module.zip'
           tag: ${{ github.event.release.tag_name }}
           body: ${{ github.event.release.body }}
+
+      - name: Deploy Release
+        id: deploy_release
+        uses: fjogeleit/http-request-action@v1
+        with:
+          url: 'https://api.foundryvtt.com/_api/packages/release_version'
+          method: 'POST'
+          contentType: 'application/json'
+          customHeaders: '{"Authorization": "${{ secrets.FVTT_PACKAGE_RELEASE_TOKEN }}"}'
+          data: '{"id": "fullsearch","dry-run":false,"release":{"version":"${{github.event.release.tag_name}}","manifest":"https://github.com/Khaali-dev/fullsearch/releases/download/${{github.event.release.tag_name}}/module.json","notes":"https://github.com/Khaali-dev/fullsearch/blob/main/CHANGELOG.md","compatibility":{"minimum":"11","verified":"11"}}}'
+      
+
